--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -123,4 +123,4 @@ sonar_scan:
     - sonar-scanner         -Dsonar.projectKey=$SONAR_PROJECT_KEY         -Dsonar.organization=$SONAR_ORG         -Dsonar.host.url=$SONAR_HOST_URL         -Dsonar.login=$SONAR_TOKEN
   rules:
     - if: '$SONAR_HOST_URL && $SONAR_TOKEN && $SONAR_PROJECT_KEY'
-  needs: ["test"]
+  needs: [""]
